--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=8080
 
-spring.datasource.url=jdbc:postgresql://database:5432/cloud_file_storage
+#spring.datasource.url=jdbc:postgresql://database:5432/cloud_file_storage
+spring.datasource.url=jdbc:postgresql://localhost:5432/cloud_file_storage
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -8,7 +9,8 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 
-spring.liquibase.url=jdbc:postgresql://database:5432/cloud_file_storage
+#spring.liquibase.url=jdbc:postgresql://database:5432/cloud_file_storage
+spring.liquibase.url=jdbc:postgresql://localhost:5432/cloud_file_storage
 spring.liquibase.user=postgres
 spring.liquibase.password=postgres
 spring.liquibase.enabled=true
