--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,12 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 
+spring.minio.url=http://localhost:9000
+spring.minio.bucket=files
+spring.minio.username=minioadmin
+spring.minio.password=minioadmin
+spring.minio.port=9000
+
 #spring.liquibase.url=jdbc:postgresql://database:5432/cloud_file_storage
 spring.liquibase.url=jdbc:postgresql://localhost:5432/cloud_file_storage
 spring.liquibase.user=postgres
